--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/basic-ha/basic-ha.ipynb
@@ -91,7 +91,7 @@
             "outputs": [
                 {
                     "name": "stdout",
-                    "text": "\nName Version\n---- -------\nAz   3.4.0  \n\n\n",
+                    "text": "\nName Version\n---- -------\nAz   3.5.0  \n\n\n",
                     "output_type": "stream"
                 }
             ],
@@ -117,7 +117,7 @@
             "outputs": [
                 {
                     "name": "stdout",
-                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm0406\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 1340\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Processor(s): 0x00000001 Function units: Separated\n        Package mask: 0x00000003\n        Processor(s): 0x00000002 Function units: Separated\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n",
+                    "text": "OSTRESS, A Generic ODBC-Based Stress/Replay Utility.\nVersion 9.04.0051 built for x64.\nCopyright ■ 1997-2014 Microsoft. All Rights Reserved\n            Computer: win-vm0218\n         Base Module: C:\\Program Files\\Microsoft Corporation\\RMLUtils\\ostress.exe\n          Process Id: 10632\n Active proc mask(0): 0x00000003\n        Architecture: 9\n           Page size: 4096\n                CPUs: 2\n    Processor groups: 1\n        Highest node: 0\n  Proximity: 00  Node: 00\n---------------------------------------\n               Group: 0\n---------------------------------------\n        Package mask: 0x00000003\n        Processor(s): 0x00000003 Function units: Shared\n        Processor(s): 0x00000003 assigned to Numa node: 0\nCurrent time bias: 0 minutes 0.00 hours DST not used \nNOTE: All command line arguments are case sensitive.  No space is allowed between the parameter switch and its specified value.\n\nUSAGE:\n\n  -S name of Microsoft SQL Server server to connect to\n  -D ODBC data source name to use for connection\n  -E use Windows auhentication to connect (default)\n  -U login ID\n  -P password\n  -d database name\n  -Q\"single batch query to process\"\n  -i SQL/RML file name or file wildcard to process\n  -n number of connections processing each input file/query - stress mode\n  -r number of iterations for each connection to execute its input file/query\n  -o output directory to write query results and log file\n  -l login timeout (sec)\n  -L integer value representing the language id\n  -t query timeout (sec)\n  -p network packet size for connections - SQL Server only\n  -q quiet mode; suppress all query output\n  -v verbose mode; show additional diagnostic output\n  -m [stress | replay] run in stress or replay mode\n  -a default password to use for SQL authentication during replay\n  -c control file name - required for replay mode\n  -T enable trace flag\n  -fx write query results as XML\n  -N disable \"OSTRESS exiting\" message\n  -M Advanced setting: max threads allowed, 0 is default setting.\n  -b Stop processing if an error is encountered during query execution.\n\nEXAMPLE: ostress -E -dpubs -Q\"select * from authors\"\nOSTRESS exiting due to error (-6)\n",
                     "output_type": "stream"
                 }
             ],
@@ -160,7 +160,16 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 3
+            "execution_count": 5
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "Now, run the following command to set the subscription within the notebook. "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "979e75ef-7c67-4306-8c9f-61392a1ff6b3"
+            }
         },
         {
             "cell_type": "code",
@@ -169,7 +178,8 @@
                 "Set-AzContext -SubscriptionId $subscriptionId "
             ],
             "metadata": {
-                "azdata_cell_guid": "241a155a-c6a1-4e8b-a20f-f9c83ae008dc"
+                "azdata_cell_guid": "241a155a-c6a1-4e8b-a20f-f9c83ae008dc",
+                "tags": []
             },
             "outputs": [],
             "execution_count": null
@@ -254,7 +264,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 5
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -287,7 +297,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 6
+            "execution_count": 8
         },
         {
             "cell_type": "markdown",
