--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
@@ -93,12 +93,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "\nName Version\n---- -------\nAz   3.4.0  \n\n\n"
+                    "text": "\nName Version\n---- -------\nAz   3.5.0  \n\n\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 3
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -119,12 +119,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Apache Maven 3.6.3 (cecedd343002696d0abb50b32b541b8a6ba2883f)\nMaven home: C:\\Program Files\\apache-maven-3.6.3\\bin\\..\nJava version: 1.8.0_241, vendor: Oracle Corporation, runtime: C:\\Program Files\\Java\\jdk1.8.0_241\\jre\nDefault locale: en_US, platform encoding: Cp1252\nOS name: \"windows 10\", version: \"10.0\", arch: \"amd64\", family: \"windows\"\n"
+                    "text": "Apache Maven 3.6.3 (cecedd343002696d0abb50b32b541b8a6ba2883f)\nMaven home: C:\\Program Files\\apache-maven-3.6.3\\bin\\..\nJava version: 1.8.0_241, vendor: Oracle Corporation, runtime: C:\\Program Files\\Java\\jdk1.8.0_241\\jre\nDefault locale: en_US, platform encoding: Cp1252\nOS name: \"windows 10\", version: \"10.0\", arch: \"amd64\", family: \"windows\"\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 4
+            "execution_count": 2
         },
         {
             "cell_type": "markdown",
@@ -156,6 +156,7 @@
                 "$database = \"AdventureWorks$($unique_id)\"\r\n",
                 "$drServer = \"aw-server$($unique_id)-dr\"\r\n",
                 "$failoverGroup = \"aw-server-fg-$($unique_id)\"\r\n",
+                "$firewallRule = \"VmFirewall\"\r\n",
                 "$ip = Invoke-RestMethod -Uri 'https://ipinfo.io/ip'\r\n",
                 "$ipAddress = $ip.Substring(0,$ip.Length-1)"
             ],
@@ -164,12 +165,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 26
+            "execution_count": 10
         },
         {
             "cell_type": "code",
@@ -179,8 +180,14 @@
             "metadata": {
                 "azdata_cell_guid": "241a155a-c6a1-4e8b-a20f-f9c83ae008dc"
             },
-            "outputs": [],
-            "execution_count": 6
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "\nName                                     Account             SubscriptionName    Environment         TenantId          \n----                                     -------             ----------------    -----------         --------          \nDS-SQLBox-BobWardDemos_bobward_R&D_60... anna.hoffman@mic... DS-SQLBox-BobWar... AzureCloud          72f988bf-86f1-4...\n\n\n",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 4
         },
         {
             "cell_type": "markdown",
@@ -205,7 +212,7 @@
                 "azdata_cell_guid": "a7fb1b43-d614-4e32-b8fb-7694fb5a7d02"
             },
             "outputs": [],
-            "execution_count": 7
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -229,14 +236,8 @@
                 "azdata_cell_guid": "1d93bfb6-e9c3-41df-bfb1-92fc0ec296ca",
                 "tags": []
             },
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": "\n\nFailoverGroupName                    : aw-server-fg-0406\nLocation                             : West US\nResourceGroupName                    : azuresqlworkshop0406\nServerName                           : aw-server0406\nPartnerLocation                      : East US\nPartnerResourceGroupName             : azuresqlworkshop0406\nPartnerServerName                    : aw-server0406-dr\nReplicationRole                      : Primary\nReplicationState                     : CATCH_UP\nReadWriteFailoverPolicy              : Automatic\nFailoverWithDataLossGracePeriodHours : 1\nDatabaseNames                        : {}\n\n\n\n"
-                }
-            ],
-            "execution_count": 8
+            "outputs": [],
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -262,12 +263,21 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "\n\nFailoverGroupName                    : aw-server-fg-0406\nLocation                             : West US\nResourceGroupName                    : azuresqlworkshop0406\nServerName                           : aw-server0406\nPartnerLocation                      : East US\nPartnerResourceGroupName             : azuresqlworkshop0406\nPartnerServerName                    : aw-server0406-dr\nReplicationRole                      : Primary\nReplicationState                     : CATCH_UP\nReadWriteFailoverPolicy              : Automatic\nFailoverWithDataLossGracePeriodHours : 1\nDatabaseNames                        : {AdventureWorks0406}\n\n\n\n"
+                    "text": "\n\nFailoverGroupName                    : aw-server-fg-0218\nLocation                             : West US\nResourceGroupName                    : azuresqlworkshop0218\nServerName                           : aw-server0218\nPartnerLocation                      : East US\nPartnerResourceGroupName             : azuresqlworkshop0218\nPartnerServerName                    : aw-server0218-dr\nReplicationRole                      : Primary\nReplicationState                     : CATCH_UP\nReadWriteFailoverPolicy              : Automatic\nFailoverWithDataLossGracePeriodHours : 1\nDatabaseNames                        : {AdventureWorks0218}\n\n\n\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 9
+            "execution_count": 7
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "The above step takes some time, because what you're doing is restoring the database in the other region, which involves copying the data from the original region to the DR region. "
+            ],
+            "metadata": {
+                "azdata_cell_guid": "f6670a9e-b739-4df8-8f45-20351ad837d6"
+            }
         },
         {
             "cell_type": "markdown",
@@ -293,7 +303,7 @@
                 "tags": []
             },
             "outputs": [],
-            "execution_count": 28
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -317,9 +327,9 @@
                 "\r\n",
                 "```java\r\n",
                 "   // UPDATE WITH YOUR INFO\r\n",
-                "   private static final String FAILOVER_GROUP_NAME = \"aw-server-fg-ID\";  // add failover group name\r\n",
+                "   private static final String FAILOVER_GROUP_NAME = \"aw-server-fg-ID\";  // add workshop ID\r\n",
                 "   // UPDATE WITH YOUR INFO\r\n",
-                "   private static final String DB_NAME = \"AdventureWorksID\";  // add database name\r\n",
+                "   private static final String DB_NAME = \"AdventureWorksID\";  // add workshop ID\r\n",
                 "   // UPDATE WITH YOUR INFO\r\n",
                 "   private static final String USER = \"cloudadmin\";  // add database user\r\n",
                 "   // UPDATE WITH YOUR INFO\r\n",
@@ -383,12 +393,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Secondary\n"
+                    "text": "Secondary\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 39
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -410,12 +420,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 35
+            "execution_count": 13
         },
         {
             "cell_type": "markdown",
@@ -437,12 +447,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Primary\n"
+                    "text": "Primary\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 36
+            "execution_count": 14
         },
         {
             "cell_type": "markdown",
@@ -464,12 +474,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": ""
+                    "text": "",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 37
+            "execution_count": 15
         },
         {
             "cell_type": "markdown",
@@ -491,12 +501,12 @@
             },
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
-                    "text": "Secondary\n"
+                    "text": "Secondary\n",
+                    "output_type": "stream"
                 }
             ],
-            "execution_count": 38
+            "execution_count": 16
         },
         {
             "cell_type": "markdown",
@@ -512,7 +522,7 @@
             "source": [
                 "You've seen how you can use the primary/secondary in an auto-failover group to help offload read-heavy workloads from the primary. In the previous activity, you also saw how in certain service tiers, like Business critical, you get a read-replica without setting up auto-failover groups. This begs the question, how many read-replicas do you have with a Business critical Azure SQL Database with an auto-failover group?  \r\n",
                 "\r\n",
-                "Maybe you guessed it, but the answer is **3**. You can investigate this claim by using SSMS (or ADS) to connect to the following servers and running the command to check if it's ReadWrite or ReadOnly below:  \r\n",
+                "Maybe you guessed it, but the answer is **3**. You can investigate this claim by using SSMS (or ADS) to connect to the following servers (be sure to specify the database under connection properties) and running the command to check if it's ReadWrite or ReadOnly below:  \r\n",
                 "\r\n",
                 "Connections:  \r\n",
                 "* `aw-server-fg-`YourID`.database.windows.net`  \r\n",
