--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -23,7 +23,7 @@
                 "\r\n",
                 "<p style=\"border-bottom: 1px solid lightgrey;\"></p>\r\n",
                 "\r\n",
-                "In this activity, you'll see how a common error can be recovered using point in time restore (PITR). This is easy to do in the portal or programmatically, but in this activity you'll see how to do it with the Azure CLI through the Azure Cloud Shell.  \r\n",
+                "In this activity, you'll see how a common error can be recovered using point in time restore (PITR). This is easy to do in the portal or programmatically, but in this activity you'll see how to do it with the Azure CLI through a PowerShell notebook.  \r\n",
                 "\r\n",
                 "\r\n",
                 "**Set up**   \r\n",
@@ -83,9 +83,97 @@
                 "1. Rename the new database to the original database name, e.g. **AdventureWorks0406-copy** to **AdventureWorks0406**.  \r\n",
                 "1. Delete the original database, e.g. **AdventureWorks0406-old**.  \r\n",
                 "\r\n",
+                "\r\n",
+                "**Set up Azure CLI**\r\n",
+                "\r\n",
+                "Fianlly, before you get into the steps, fill in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
+                "\r\n",
+                "You can then log in to the Azure portal and set the subscription.  \r\n",
+                "\r\n",
+                "Run the cells before moving to **Step 1**.  \r\n",
+                ""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "ac3d3027-36b2-4436-aa49-c5e47fd2f342"
+            }
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "$subscription_id = \"<SubscriptionId>\"\r\n",
+                "$unique_id = \"<WorkshopUserID>\"\r\n",
+                "$database_name = \"AdventureWorks$($unique_id)\"\r\n",
+                "$database_name_copy = \"$($database_name)-copy\"\r\n",
+                "$database_name_old = \"$($database_name)-old\"\r\n",
+                "$logical_server = \"aw-server$($unique_id)\"\r\n",
+                "$resource_group = \"azuresqlworkshop$($unique_id)\""
+            ],
+            "metadata": {
+                "azdata_cell_guid": "020f8439-7a13-4c60-b9db-2d406f956fc5",
+                "tags": []
+            },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 1
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# Log in to the Azure portal with your workshop credentials\r\n",
+                "# You may get an error initially, run again, and you should get a pop-up that directs you through authenticating\r\n",
+                "az login"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "dc37df07-7615-4910-8ef9-29804b590428"
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# Specify your subscription for the workshop\r\n",
+                "az account set --subscription $subscription_id\r\n",
+                "\r\n",
+                "# Confirm you're connected to the correct subscription\r\n",
+                "az account show"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "48aab02a-b9b1-4b53-90f0-24dd334237a7",
+                "tags": []
+            },
+            "outputs": [],
+            "execution_count": null
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "# Specify your default subscription, resource group, and Azure SQL Database logical server\r\n",
+                "az configure --defaults group=$resource_group sql-server=$logical_server"
+            ],
+            "metadata": {
+                "azdata_cell_guid": "7e72198a-9791-409e-9386-7821479faf8a"
+            },
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "text": "",
+                    "output_type": "stream"
+                }
+            ],
+            "execution_count": 6
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "**Step 1 - Determine the time you need to go back to using Audit logs**   \r\n",
                 "\r\n",
-                "The first step is to figure out when you should restore the database. In order to complete step 1, you need to know when the last \"good\" transaction occurred, before the \"bad\" on, so you can restore to before the \"bad\" transaction but after the last \"good\" one.  \r\n",
+                "The first step is to figure out when you should restore the database. In order to complete step 1, you need to know when the last \"good\" transaction occurred, before the \"bad\" one, so you can restore to before the \"bad\" transaction but after the last \"good\" one.  \r\n",
                 "\r\n",
                 "You may know ways to determine this time, but a new way may be to use the Audit logs in the Azure portal. Navigate to your Azure SQL Database in the Azure portal, e.g. **AdventureWorks0406**. In the left-hand menu, under Security, select **Auditing** and then select **View audit logs**.  \r\n",
                 "\r\n",
@@ -108,12 +196,13 @@
                 "\r\n",
                 "![](./graphics/laresults.png)  \r\n",
                 "\r\n",
+                "> NOTE: This can take a few minutes to show up here. If you are waiting for longer than 3-5 minutes, if you left the query window open in SSMS when you dropped the table, you can grab the drop time from there. But know, that in a real world situation, it is highly unlikely you will be able to get to that window with the completion time, so using auditing can help greatly.  \r\n",
                 "\r\n",
                 "You'll notice, in this example, the date/time is `2020-02-10 09:28:54.509`. The required format is slightly different. Update it using this example as a reference and to the definition of `$before_error_time`.  \r\n",
                 "* Log Analytics format: `2020-02-10 09:28:54.509`\r\n",
                 "* Required format: `2020-02-10T09:28:54.509`  \r\n",
                 "\r\n",
-                "The last part of this step is filling in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
+                "\r\n",
                 "\r\n",
                 ""
             ],
@@ -124,15 +213,7 @@
         {
             "cell_type": "code",
             "source": [
-                "$before_error_time =\"<DropTime>\"\r\n",
-                "\r\n",
-                "$subscription_id = \"<SubscriptionId>\"\r\n",
-                "$unique_id = \"<WorkshopUserID>\"\r\n",
-                "$database_name = \"AdventureWorks$($unique_id)\"\r\n",
-                "$database_name_copy = \"$($database_name)-copy\"\r\n",
-                "$database_name_old = \"$($database_name)-old\"\r\n",
-                "$logical_server = \"aw-server$($unique_id)\"\r\n",
-                "$resource_group = \"azuresqlworkshop$($unique_id)\""
+                "$before_error_time =\"2020-02-10T09:28:54.509\""
             ],
             "metadata": {
                 "azdata_cell_guid": "e66b65ce-c896-4457-97c4-9554c94d2aef",
@@ -145,7 +226,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 1
+            "execution_count": 7
         },
         {
             "cell_type": "markdown",
@@ -161,83 +242,17 @@
             }
         },
         {
-            "cell_type": "markdown",
-            "source": [
-                "First we want to make sure we're logged in and set up to use the Azure CLI locally. "
-            ],
-            "metadata": {
-                "azdata_cell_guid": "9fbe71ed-ccf8-4d9a-934a-a5874a080ccf"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Log in to the Azure portal with your workshop credentials\r\n",
-                "# You may get an error initially, run again, and you should get a pop-up that directs you through authenticating\r\n",
-                "az login"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "12d396b2-92c4-483b-a741-b9aa84807d29",
-                "tags": []
-            },
-            "outputs": [],
-            "execution_count": 2
-        },
-        {
-            "cell_type": "markdown",
-            "source": [
-                "Before you run the next cell, confirm the previous cell has completed, returning your subscription information."
-            ],
-            "metadata": {
-                "azdata_cell_guid": "16096315-c0e5-4dad-be7d-d7f11f01187c"
-            }
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Specify your subscription for the workshop\r\n",
-                "az account set --subscription $subscription_id\r\n",
-                "\r\n",
-                "# Confirm you're connected to the correct subscription\r\n",
-                "az account show"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "da44d206-65f3-4749-b186-364ee211b766",
-                "tags": []
-            },
-            "outputs": [],
-            "execution_count": 3
-        },
-        {
-            "cell_type": "code",
-            "source": [
-                "# Specify your default subscription, resource group, and Azure SQL Database logical server\r\n",
-                "az configure --defaults group=$resource_group sql-server=$logical_server"
-            ],
-            "metadata": {
-                "azdata_cell_guid": "e91e1c9a-7175-45e0-879b-0f6ef150db3c",
-                "tags": []
-            },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "text": "",
-                    "output_type": "stream"
-                }
-            ],
-            "execution_count": 4
-        },
-        {
             "cell_type": "code",
             "source": [
                 "# Restore the database to the time before the database was deleted\r\n",
-                "az sql db restore --dest-name $database_name_copy --name $database_name --time $before_error_time"
+                "az sql db restore --dest-name $database_name_copy --name $database_name --time $before_error_time --verbose"
             ],
             "metadata": {
-                "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412"
+                "azdata_cell_guid": "828e608f-fadd-40a7-8ac2-1f5394a81412",
+                "tags": []
             },
             "outputs": [],
-            "execution_count": 5
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -305,7 +320,7 @@
                 "azdata_cell_guid": "f2a96ef9-d39c-4f16-af2d-d41adb56403e"
             },
             "outputs": [],
-            "execution_count": 8
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -328,7 +343,7 @@
                 "azdata_cell_guid": "dd42263b-5296-4ae8-9d69-a2c1cd2b2e1f"
             },
             "outputs": [],
-            "execution_count": 10
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
@@ -357,7 +372,7 @@
                     "output_type": "stream"
                 }
             ],
-            "execution_count": 9
+            "execution_count": 12
         },
         {
             "cell_type": "markdown",
@@ -377,7 +392,7 @@
                 "azdata_cell_guid": "18ef1258-ace5-481c-b3a7-b6962894d2cc"
             },
             "outputs": [],
-            "execution_count": 11
+            "execution_count": null
         },
         {
             "cell_type": "markdown",
