--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -28,8 +28,8 @@
                 "\r\n",
                 "**Set up**   \r\n",
                 "\r\n",
-                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the readme.md file to get set up.  \r\n",
-                "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **PowerShell**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
+                "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the main Module file to get set up.  \r\n",
+                "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **PowerShell**. This determines what language the code blocks in the file are. In this case, that language is PowerShell.  \r\n",
                 "2. Confirming the Kernel is **PowerShell**, for \"Attach to\", confirm it reads **localhost**.  \r\n",
                 "\r\n",
                 "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
@@ -308,7 +308,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "To set it back to default (or change to Proxy), you can use the same set of commands."
+                "Set it back to default for future activities, by using the same set of commands."
             ],
             "metadata": {
                 "azdata_cell_guid": "45a85215-ed6c-447f-8c06-7f59220e9915"
