--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/loaddata/LoadData.ipynb
@@ -29,7 +29,7 @@
                 "\r\n",
                 "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the main Module 2 file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **SQL**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
-                "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your Azure SQL Database logical server.  \r\n",
+                "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your Azure SQL Database logical server and be sure to **select your AdventureWorks database as the database to connect to**..  \r\n",
                 "\r\n",
                 "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
                 "> Some of the cells have been run before, this is just to show you the expected result from the testing of the labs. If you choose not to complete the labs/prerequisites, do not run any cells, just review the results.      \r\n",
@@ -263,7 +263,7 @@
                 "\r\n",
                 "You're finally ready to `BULK INSERT` one of the store return files. \r\n",
                 "\r\n",
-                "Review the comments before running the following cell."
+                "Run the following cell, and while it completes, review the comments."
             ],
             "metadata": {
                 "azdata_cell_guid": "7d0ffa7d-660a-48c1-aa6b-2a295aff2e30"
