--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/verifydeployment/VerifyDeployment.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/verifydeployment/VerifyDeployment.ipynb
@@ -29,7 +29,7 @@
                 "\r\n",
                 "0. You should have opened this file using Azure Data Studio. If you didn't, please refer to Module 2 Activity 3 in the main Module 2 file to get set up.  \r\n",
                 "1. In the bar at the top of this screen, confirm or change the \"Kernel\" to **SQL**. This determines what language the code blocks in the file are. In this case, that language is SQL.  \r\n",
-                "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your Azure SQL Database logical server, and select your AdventureWorks database as the database to connect to.  \r\n",
+                "2. For \"Attach to\", use the drop-down to select **Change Connection**. From the Recent Connections pane, you should be able to select your Azure SQL Database logical server, and **select your AdventureWorks database as the database to connect to**.  \r\n",
                 "\r\n",
                 "Now that you're set up, you should read the text cells and \"Run\" the code cells by selecting the play button that appears in the left of a code cell when you hover over it.  \r\n",
                 "> Some of the cells have been run before, this is just to show you the expected result from the testing of the labs. If you choose not to complete the labs/prerequisites, do not run any cells, just review the results.      \r\n",
@@ -3624,7 +3624,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "In the first query's result, you'll notice that msdb, tempdb, and model are not listed. This is because you are just getting a database. The master database that you do have access to is not the same as in SQL Server or Azure SQL Managed Instance, because you won't have access to any of the instace-scoped features or views. In Azure SQL Managed Instance, you do get msdb, tempdb, and model listed because these are all things you have some level of control over.   \r\n",
+                "In the first query's result, you'll notice that msdb, tempdb, and model are not listed. This is because you are just getting a database. The master database that you do have access to is not the same as in SQL Server or Azure SQL Managed Instance, because you won't have access to any of the instance-scoped features or views. In Azure SQL Managed Instance, you do get msdb, tempdb, and model listed because these are all things you have some level of control over.   \r\n",
                 "\r\n",
                 "That also helps explain why `sys.objects` doesn't include SYSTEM or INTERNAL objects for Azure SQL Database, but it does for Azure SQL Managed Instance and SQL Server.  "
             ],
