--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/fg/fg-powershell.ipynb
@@ -273,7 +273,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "The above step takes some time, because what you're doing is restoring the database in the other region, which involves copying the data from the original region to the DR region. "
+                "The above step takes some time, because what you're doing is restoring the database in the other region, which involves copying the data from the original region to the DR region. You can work on **Step 5** and then come back here to check if it has completed. If it hasn't, you can work on **Step 6** and then check back here.  "
             ],
             "metadata": {
                 "azdata_cell_guid": "f6670a9e-b739-4df8-8f45-20351ad837d6"
