--- a/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/05-Availability/pitr/pitr.ipynb
@@ -86,7 +86,7 @@
                 "\r\n",
                 "**Set up Azure CLI**\r\n",
                 "\r\n",
-                "Fianlly, before you get into the steps, fill in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
+                "Finally, before you get into the steps, fill in your **Subscription ID** and **Workshop ID** information so the rest goes smoothly.  \r\n",
                 "\r\n",
                 "You can then log in to the Azure portal and set the subscription.  \r\n",
                 "\r\n",
