--- a/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
+++ b/AzureSQLWorkshop/azuresqlworkshop/02-DeployAndConfigure/cli/AzureCli.ipynb
@@ -58,7 +58,7 @@
             "cell_type": "code",
             "source": [
                 "# Specify your subscription for the workshop\r\n",
-                "# Should appear in the list of subscriptions output in previous cell\r\n",
+                "# Should appear in the list of subscriptions output in previous cell under "subscriptionId" or "Id"\r\n",
                 "az account set --subscription <subscription-ID>"
             ],
             "metadata": {
